--- a/app/assets/stylesheets/modules/_registrations.new.scss
+++ b/app/assets/stylesheets/modules/_registrations.new.scss
@@ -37,7 +37,6 @@
         }
         input{
           margin-bottom: 27px;
-          width: 100%;
           height: 48px;
           margin-left: auto;
           margin-right: auto;
@@ -55,10 +54,19 @@
           height: 19px;
         }
         &__nickname{
+          input{
+            width: 100%;
+          }
         }
         &__email{
+          input{
+            width: 100%;
+          }
         }
         &__password{
+          input{
+            width: 100%;
+          }
           #user_password{
             margin-bottom:1px;
           }
@@ -66,6 +74,11 @@
             margin: 8px 0 0;
             color: #888;
             font-size: 14px;
+          }
+        }
+        &__passwordconfirmation{
+          input{
+            width: 100%;
           }
         }
         &__desc-safety{
@@ -95,22 +108,23 @@
           margin-bottom: 12px;
         }
         &__birthdate{
-          &__year{
+          display: flex;
+          align-items: center;
+
+          .birthdate_field{
             display: flex;
-            .birthdate_field{
-              width: 90%;
-              .field_with_errors{
-                display: flex;
-                width: 100%;
-                #user_birthdate_1i{
-                  display: inline-block;
-                }
-                #user_birthdate_2i{
-                  display: inline-block;
-                }
-                #user_birthdate_3i{
-                  display: inline-block;
-                }
+            width: 100%;
+            .field_with_errors{
+              display: contents;
+              width: 100%;
+              #user_birthdate_1i{
+                display: inline-block;
+              }
+              #user_birthdate_2i{
+                display: inline-block;
+              }
+              #user_birthdate_3i{
+                display: inline-block;
               }
             }
           }
@@ -130,6 +144,7 @@
         &__actions{
           input{
             height: 55px;
+            width: 100%;
             display: inherit;
             display: inline-block;
             background-color: red;
