--- a/app/assets/stylesheets/products/_new.scss
+++ b/app/assets/stylesheets/products/_new.scss
@@ -57,32 +57,38 @@
   font-size: 13px;
   margin-bottom: 20px;
 }
+
 .products_new-image-box{
+  display: flex;
   min-height: 150px;
+  width: 100%;
+}
+
+.products_new-content{
+  display: flex;
+  height: 150px;
+  max-width: 100%;
+}
+
+.products_new-uploader-box{
+  height: 150px;
   width: 100%;
   background-color: #f8f8f8;
   border: dashed 1px #d3d3d3;
-  margin-bottom: 20px;
 }
 
-.products_new-imagearea__select{
-  min-height: 100%;
+.products_new-uploader__label{
+  display:block;
+  height: 100%;
   width: 100%;
-  display: block;
-  text-align: center;
-  padding-top: 40px;
   cursor: pointer;
-  &--icon{
-    padding-bottom: 10px;
-  }
-  &--explanation{
-    font-size: 11px;
-  }
 }
 
-.js-remove{
-  width: 6%;
-  cursor: pointer;
+.products_new-preview-box{
+  text-align: center;
+  padding: 10px;
+  margin: 0 10px;
+  border: dashed 1px #d3d3d3;
 }
 
 .products_new-main__form--product{
