--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -8,16 +8,14 @@
             .products_new-product__headline--title 出品画像
             .products_new-product__headline--required 必須
           %p.products_new-product__explanation 最大10枚までアップロードできます
-          .products_new-image-box
-            #previews
-            = form.fields_for :product_images do |i|
-              .js-file_group
-                = i.file_field :image, style: "display: none;", class: "js-file"
-                = i.label :image, class: 'products_new-imagearea__select' do
-                  = icon('fas', 'camera', class: 'products_new-imagearea__select--icon')
-                  %p.products_new-imagearea__select--explanation
-                    ドラッグアンドドロップ
-                    %br またはクリックしてファイルをアップロード
+          .products_new-image
+            .products_new-image-box
+              .products_new-content
+              .products_new-uploader-box
+                %label.products_new-uploader__label
+                  = form.fields_for :product_images do |i|
+                    .product_newt-js-file_group{"data-index" => "#{@product.product_images.index}"}
+                      = form.file_field :image, class: 'product_new-js-file', style: "display:none"
         .products_new-title
           .products_new-product__headline
             .products_new-product__headline--title 商品名
