--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@
 @import "modules/registrations.new";
 @import "modules/sessions.new";
 @import "modules/users.new";
+@import "modules/users.create";
 @import "modules/users.show";
 @import "categories/index";
 @import "categories/categorymenu";
