--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -13,9 +13,9 @@
               .products_new-content
               .products_new-uploader-box
                 %label.products_new-uploader__label
-                  = form.fields_for :product_images do |i|
-                    .product_newt-js-file_group{"data-index" => "#{@product.product_images.index}"}
-                      = form.file_field :image, class: 'product_new-js-file', style: "display:none"
+                  = form.fields_for :product_images do |image|
+                    .products_newt-js-file_group{"data-index" => "#{@product.product_images.index}"}
+                      = image.file_field :image, class: 'products_new-js-file', style: "display:none"
         .products_new-title
           .products_new-product__headline
             .products_new-product__headline--title 商品名
