--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -7,7 +7,7 @@
           .products_new-product__headline
             .products_new-product__headline--title 出品画像
             .products_new-product__headline--required 必須
-          %p.products_new-product__explanation 最大10枚までアップロードできます
+          %p.products_new-product__explanation 最大5枚までアップロードできます
           .products_new-image
             .products_new-image-box
               .products_new-content
@@ -33,7 +33,12 @@
               .products_new-product__headline--title カテゴリー
               .products_new-product__headline--required 必須
             .products_new-product_explanation__category--box
-              = form.select :category, @category_parent_array, {}, {class: "products_new-product_explanation__category--parent",id: 'parent_category'}
+              - if @product.persisted?
+                = form.select :parent_name, @category_parent_array, {selected: @product.category.parent.parent.name}, {class: "products_new-product_explanation__category--parent",id: 'parent_category'}
+                = form.select :child_id, options_for_select(@category_children_array.map{|b| [b.name, b.id, {data:{category: b.id}}]}, {prompt: "選択してください", selected: @product.category.parent.id}),{},  {class: "products_new-product_explanation__category--children",id: 'children_category'}
+                = form.select :category_id, options_for_select(@category_grandchildren_array.map{|b| [b.name, b.id, {data:{category: b.id}}]}, {prompt: "選択してください", selected: @product.category.id}),{}, {class: "products_new-product_explanation__category--grandchildren",id: 'grandchildren_category'}
+              - else
+                = form.select :category, @category_parent_array, {}, {class: "products_new-product_explanation__category--parent",id: 'parent_category'}
           .products_new-product_explanation__brand
             .products_new-product__headline
               .products_new-product__headline--title ブランド
