--- a/app/assets/stylesheets/modules/_users.show.scss
+++ b/app/assets/stylesheets/modules/_users.show.scss
@@ -101,10 +101,10 @@
 
     &__head{
       text-align: center;
-      background-image:url("pict/sakura.jpg");
+      background-image: url("/images/sakura.jpg");
       background-size:cover;
       &__icon{
-        height: 60px;
+        height: 80px;
         margin-top: 40px;
         img{
           border-radius: 50%;
