--- a/app/assets/stylesheets/modules/_credit_cards.new.scss
+++ b/app/assets/stylesheets/modules/_credit_cards.new.scss
@@ -70,7 +70,7 @@
         padding-bottom: 27px;
         #token_submit{
           width: 100%;
-          background-color: red;
+          background-color: #3CCACE;
           border: none;
           color: white;
           cursor: pointer;
