--- a/app/assets/stylesheets/modules/_registrations.new.scss
+++ b/app/assets/stylesheets/modules/_registrations.new.scss
@@ -147,7 +147,7 @@
             width: 100%;
             display: inherit;
             display: inline-block;
-            background-color: red;
+            background-color: #3CCACE;
             color: white;
             border: none;
             margin-top: 29px;
