--- a/app/assets/stylesheets/modules/_users.new.scss
+++ b/app/assets/stylesheets/modules/_users.new.scss
@@ -132,7 +132,7 @@
             height: 55px;
             display: inherit;
             display: inline-block;
-            background-color: red;
+            background-color: #3CCACE;
             color: white;
             border: none;
             cursor: pointer;
