--- a/app/assets/stylesheets/modules/_users.show.scss
+++ b/app/assets/stylesheets/modules/_users.show.scss
@@ -101,8 +101,8 @@
 
     &__head{
       text-align: center;
-      background-image: url("/images/sakura.jpg");
       background-size:cover;
+      background-color: #3CCACE;
       &__icon{
         height: 80px;
         margin-top: 40px;
