update_credit_cards/show編集
-what
クレジットカード削除時の確認メッセージ追加

--- a/app/views/credit_cards/show.html.haml
+++ b/app/views/credit_cards/show.html.haml
@@ -20,6 +20,6 @@
             = exp_month + " / " + exp_year
         .credit_cards-show__wrapper__cards-index__detail__right
           .credit_cards-show__wrapper__cards-index__detail__right__delete-button
-            = form_tag(delete_credit_cards_path, method: :post, id: 'charge-form',  name: "inputForm") do
+            = form_tag(delete_credit_cards_path, method: :post, data: { confirm: "【確認】クレジットカード情報を削除してよろしいですか？\n（削除後も再登録可能です）" }, id: 'charge-form',  name: "inputForm") do
               %input{ type: "hidden", name: "card_id", value: "" }
               %button 削除する
