update_credit_cards/show
#what
-カードブランドロゴ表示
-各社ロゴ追加
-border-radius追加

--- a/app/assets/stylesheets/modules/_credit_cards.show.scss
+++ b/app/assets/stylesheets/modules/_credit_cards.show.scss
@@ -10,6 +10,7 @@
     margin-right: auto;
     margin-left: auto;
     background-color: white;
+    border-radius: 10px;
     &__content-title{
       height: auto;
       text-align: center;
