--- a/app/views/credit_cards/new.html.haml
+++ b/app/views/credit_cards/new.html.haml
@@ -52,4 +52,4 @@
           = text_field_tag "cvc", "", class: "cvc", placeholder: "カード背面3桁または4桁の番号", maxlength: "4", id: "cvc"
           #card_token
         .credit_cards-new__wrapper__form__submit
-          = submit_tag "追加する", id: "token_submit"
+          = submit_tag "登録する", id: "token_submit"
