--- a/app/assets/stylesheets/modules/_users.show.scss
+++ b/app/assets/stylesheets/modules/_users.show.scss
@@ -36,6 +36,7 @@
         background-color: white;
         box-shadow: 0 2px 2px 0 rgba(0,0,0,0.2);
         font-size: 14px;
+        border-radius: 5px;
       }
     }
     &__furimapay-desc{
@@ -67,7 +68,7 @@
     }
     &__settings-desc{ 
       margin-top: 40px;
-      h{
+      h1{
         font-weight: bold;
       }
     }
@@ -90,6 +91,26 @@
         background-color: white;
         box-shadow: 0 2px 2px 0 rgba(0,0,0,0.2);
         font-size: 14px;
+        border-radius: 5px;
+
+      }
+      &__destroy{
+        &:hover{
+          color:#000;
+          background-color: lightgrey;
+          cursor: pointer;
+        }
+        color: #555;
+        display: inline-block;
+        width: 100%;
+        height: 48px;
+        line-height: 48px;
+        padding-left: 20px;
+        margin-bottom: 2px;
+        background-color: white;
+        box-shadow: 0 2px 2px 0 rgba(0,0,0,0.2);
+        font-size: 14px;
+        border-radius: 5px;
       }
     }
   }
@@ -98,11 +119,11 @@
     height: 200px;
     display: flex;
     flex-direction: column;
-
     &__head{
       text-align: center;
       background-size:cover;
       background-color: #3CCACE;
+      border-radius: 5px;
       &__icon{
         height: 80px;
         margin-top: 40px;
